[tool.poetry]
name = "agent-pie"
version = "0.1.0"
description = ""
authors = ["VishnuRathore98 <rathorevishnu666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
langchain = {extras = ["openai"], version = "^0.3.27"}
sqlalchemy = "^2.0.43"
psycopg2 = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
langchain-huggingface = "^0.3.1"
langchain-community = "^0.3.29"
pypdf = "^6.0.0"
passlib = "^1.7.4"
langgraph = "^0.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
